new project websit

--- a/Projects/amazon clone/style.css
+++ b/Projects/amazon clone/style.css
@@ -163,6 +163,32 @@ span{
     align-items: flex-end;
 }
 
+
+
+
+
+
+  /* .carousel{
+    background-image:image-set("1.jpg");
+    background-size: cover;
+    height: 350px;
+    display: flex;
+    justify-content:  center;
+    align-items: flex-end;
+  } */
+/* 
+  .carousel-cell {
+    width: 100%;
+    margin-right: 10px;
+  }
+
+  .carousel img{
+    width: 100%;
+  } */
+  
+
+
+
 .hero-msg{
     background-color:white;
     color: black;
