--- a/Projects/project 2/style.css
+++ b/Projects/project 2/style.css
@@ -118,7 +118,7 @@ video{
 /* page 2 styling */
 
 #page2{
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     z-index: 10;
     
@@ -176,6 +176,176 @@ video{
       transform: translateX(-100%);
     }
   }
+
+
+  #about-us{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    position: relative;
+    z-index: 10;
+  }
+
+
+#about-us-in h3{
+    text-align: center;
+    text-transform: uppercase;
+    color: #95c11e;
+}
+
+#about-us-in p{
+    text-align: center;
+    padding: 20px;
+}
+
+#about-us img{
+    height: 250px;
+    /* padding: 0 50px; */
+    border-radius: 20px;
+}
+
+
+/* Cards styling */
+
+#card-contaner{
+    /* background-color: red; */
+    height: 60vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 70px;
+}
+
+.cards{
+    height: 80%;
+    width: 24%;
+    /* background-color: blue; */
+    border-radius: 20px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    z-index: 10;
+    overflow: hidden;
+    transition: all ease 0.6s;
+}
+
+
+#card1{
+    background-image: url(card1.jpg);
+}
+
+
+#card2{
+    background-image: url(card2.jpg);
+}
+
+
+#card3{
+    background-image: url(card3.jpg);
+}
+
+
+.overlay{
+    height: 100%;
+    width: 100%;
+    background-color: #95c11e;
+    padding: 30px;
+    padding-top: 160px;
+    opacity: 0;
+    transition: all ease 0.6s;
+    
+}
+
+.overlay h4{
+    color: #000;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: 800;
+    white-space: nowrap;
+    margin-bottom: 20px;
+
+
+}
+
+
+.overlay p{
+    color: #000;
+}
+
+.cards:hover .overlay{
+    opacity: 1;
+}
+
+.cards:hover{
+    transform: rotate3d(-1,1,0,20deg);
+}
+
+
+
+/* green dot stlying */
+
+#green-in{
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient( #95c11e,#96c11e85);
+    /* padding-left: 20px; */
+    /* padding-right: 20px; */
+}
+
+#green-in h4{
+    width: 50%;
+    font-size: 24px;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 27px;
+    color: #000;
+    font-weight: 800;
+    
+}
+
+
+#green-in img{
+    height: 100%;
+    object-fit: cover;
+    width: 14%;
+}
+
+
+/* page 3 */
+
+#page3 {
+    height: 100vh;
+    width: 100%;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    position: relative;
+    justify-content: center;
+  }
+  #page3 > p {
+    font-size: 35px;
+    font-weight: 700;
+    width: 60%;
+    line-height: 45px;
+    text-align: center;
+  }
+  
+  #page3 img {
+    position: absolute;
+    height: 60px;
+  }
+  #page3 #colon1 {
+    left: 15%;
+    top: 25%;
+  }
+  #page3 #colon2 {
+    bottom: 30%;
+    right: 15%;
+  }
+
 
 
 
