--- a/Projects/project 2/style.css
+++ b/Projects/project 2/style.css
@@ -6,10 +6,28 @@
     color: #fff;
 }
 
+*::selection{
+    background-color: #fff;
+    color: #95c11e;
+}
+
 html,body{
     height: 100%;
     width: 100%;
 }
+
+body::-webkit-scrollbar{
+    display: block;
+    width: 5px;
+    background-color: #95c11e;
+}
+
+body::-webkit-scrollbar-thumb{
+    background-color: #fff;
+    border-radius: 50px;
+
+}
+
 
 
 #cursor{
@@ -113,6 +131,35 @@ video{
     width: 40%;
     text-align: center;
 }
+
+#page1 #arrow{
+    height: 200px;
+    width: 200px;
+    background-color:transparent;
+    border: 2px solid #95c11e ;
+    position: absolute;
+    display: flex;
+    left: -2%;
+    bottom: -2%;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: all ease 0.5s;
+
+}
+
+#page1 #arrow i{
+    font-size: 50px;
+    font-weight: 100;
+}
+
+#page1 #arrow:hover{
+    scale: 0.5;
+    background-color: #95c11e;
+}
+
+
+
 
 
 /* page 2 styling */
@@ -344,6 +391,130 @@ video{
   #page3 #colon2 {
     bottom: 30%;
     right: 15%;
+  }
+
+
+  /* page4 */
+
+  #page4{
+    height: 45vh ;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 70px;
+    position: relative;
+  }
+
+
+  .elem{
+    height: 70%;
+    width: 26%;
+    overflow: hidden;
+    border-radius: 20px;
+    position: relative;
+
+  }
+
+  .elem h2{
+    height: 100%;
+    width: 100%;
+    background-color: #95c11e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    transition: all ease 0.5s;
+    /* border-radius: 20px; */
+    color: #000;
+    font-weight: 900;
+    position: absolute;
+    z-index: 10;
+  }
+
+  .elem img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transition: all ease 0.5s;
+    
+  }
+
+  .elem:hover h2{
+    color: #fff;
+    background-color: transparent;
+  }
+  
+  
+  
+  #page4 h1{
+    font-size: 85px;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    position: absolute;
+    top:-15%;
+    font-weight: 900;
+    color: #000;
+    -webkit-text-stroke: 2px #fff;
+  }
+
+/* footer styling */
+  #footer {
+    height: 30vh;
+    width: 100%;
+    background: linear-gradient(to left bottom, #119f3a 0%, #a3d421 80%);
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 6.5vw;
+    padding: 0 100px;
+  }
+  #footer > img {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    z-index: 0;
+  }
+  #f1 img {
+    height: 100px;
+  }
+  #f1,
+  #f2,
+  #f3,
+  #f4 {
+    width: fit-content;
+    position: relative;
+    z-index: 99;
+    /* background-color: red; */
+  }
+  #f2 h3 {
+    font-size: 1.6vw;
+    white-space: nowrap;
+    text-transform: uppercase;
+    color: #000;
+    font-weight: 900;
+    margin-bottom: 8px;
+  }
+  
+  #f3 h3 {
+    font-size: 1.6vw;
+    white-space: nowrap;
+    text-transform: uppercase;
+    color: #000;
+    font-weight: 800;
+    margin-bottom: 8px;
+  }
+  #f4 h4 {
+    font-size: 1vw;
+    white-space: nowrap;
+    text-transform: uppercase;
+    color: #000;
+    font-weight: 600;
+    line-height: 20px;
+    margin-bottom: 8px;
   }
 
 
