--- a/Projects/project 3/style.css
+++ b/Projects/project 3/style.css
@@ -60,6 +60,8 @@ html, body{
     text-transform: uppercase;
     font-weight: 600;
 }
+
+
 /* #nav h4{
     text-decoration:underline;
 
@@ -70,7 +72,7 @@ html, body{
 }
 
 
-/* part 2 */
+/* page 1 styling */
 
 .page1 h1{
     font-size: 8vw;
@@ -96,3 +98,143 @@ html, body{
 }
 
 
+/* page2 stayling */
+
+
+.page2{
+    min-height: 90vh;
+    width: 100%;
+    padding: 100px 5vw;
+    border-bottom: 2px solid #111;
+
+}
+
+.page2 h1{
+    font-size: 7vw;
+    font-weight: 100;
+    color:#111;
+
+}
+
+
+.page2-contaner{
+    height: 60vh;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* padding: 0 5vw; */
+}
+
+.page2-left {
+    /* background-color: blue; */
+    width: 38%;
+}
+
+.page2-right {
+    /* background-color: blue; */
+    width: 20%;
+    /* color: red; */
+}
+
+.page2-left h2{
+    font-size: 3.5vw;
+    font-weight: 20;
+    color:#111;
+    line-height: 1;
+
+}
+
+
+.page2-right p{
+    font-size: 18px;
+    color: #111;
+    /* text-align: justify; */
+
+}
+
+.page2-right button{
+    width: 100%;
+    border: none;
+    border-radius: 50px;
+    padding: 4px 0;
+    background-color: #edbfff;
+    color: #111;
+    margin-top: 20px;
+}
+
+
+.page3{
+    min-height: 115vw;
+    width: 100%;
+    position: relative;
+    padding-top: 100px;
+
+}
+
+.page3 h1{
+    font-size: 6.5vw;
+    font-weight: 500;
+    color: #111;
+    margin-left: 100px;
+}
+
+.page3-part1{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+
+}
+
+.page3-part1 img{
+    height: 400px;
+    margin-top: 130px;
+    /* padding-left: 20px; */
+    border-radius: 5px;
+}
+
+.page3-part1 video{
+    height: 320px;
+    margin-top: 20px;
+    padding-right: 20px;
+    border-radius: 5px;
+}
+
+.page3-part2{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 100px;
+    position: relative;
+}
+
+.page3-part2 h3{
+    color: #111;
+    font-size: 3vw;
+    font-weight: 100;
+    margin-left: 50px;
+    
+    
+}
+
+.page3-part2 h4{
+    color: #111;
+    background-color: #edbfff;
+    height: 100px;
+    width: 100px;
+    border-radius: 50px;
+    /* text-align: center; */
+    display: flex;
+    align-items:center;
+    padding: 20px;
+    font-weight: 50;
+    margin-right: 90px;
+    
+}
+
+
+.page3-part2 h4:hover{
+    background-color: #111;
+    color: #fff;
+}
