--- a/Projects/project 3/style.css
+++ b/Projects/project 3/style.css
@@ -19,11 +19,15 @@ html, body{
     background-color: #edbfff;
     z-index: 8;
     mix-blend-mode: difference;
+    transition: background-image ease 0.5s;
+    background-position: center;
+    background-size: cover;
     /* transition: left linear 0.1s top linear 0.1s; */
 }
 
 .main{
     background-color: #0f0d0d;
+    cursor: none;
 }
 
 .page1{
@@ -337,6 +341,8 @@ html, body{
     font-size: 4vw;
     text-transform: uppercase;
     font-weight: 400;
+    margin: 50px;
+    
     
 }
 
