--- a/Projects/project 3/style.css
+++ b/Projects/project 3/style.css
@@ -25,6 +25,20 @@ html, body{
     /* transition: left linear 0.1s top linear 0.1s; */
 }
 
+#purple{
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    position: fixed;
+    background-color: #edbfff;
+    z-index: 100;
+    opacity: 0;
+    display: none;
+    transition: all ease 0.2s;
+
+
+}
+
 .main{
     background-color: #0f0d0d;
     cursor: none;
@@ -35,6 +49,7 @@ html, body{
     width: 100%;
     position: relative;
     z-index: 9;
+    padding-top: 12vw;
     /* background-color: red; */
 }
 
@@ -48,6 +63,9 @@ html, body{
     align-items:center;
     justify-content:space-between;
     padding: 0 30px;
+    position: fixed;
+    mix-blend-mode: difference;
+    z-index: 102;
 } 
 
 #nav img{
@@ -96,7 +114,6 @@ html, body{
     font-size: 8vw;
     font-weight: 140;
     /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
-    margin-top: 12vw;
     margin-left: 6vw; 
 }
 
@@ -123,7 +140,7 @@ html, body{
     min-height: 90vh;
     width: 100%;
     padding: 100px 5vw;
-    border-bottom: 2px solid #111;
+    border-bottom: 2px solid rgb(111, 111, 111);
     position: relative;
     z-index: 9;
 
@@ -271,7 +288,7 @@ html, body{
     /* background-color: red; */
     padding: 100px 50px;
     padding-top: 200px;
-    border-top: 2px solid black;
+    border-top: 2px solid rgb(111, 111, 111);
 }
 
 
@@ -329,12 +346,13 @@ html, body{
 
 /* page5 */
 .page5{
-    min-height: 100vw;
+    min-height: 75vw;
     width: 100%;
     position: relative;
     z-index: 9;
     padding: 140px 100px;
     /* background-color:blue; */
+    border-top: 2px solid rgb(111, 111, 111);
 }
 
 .page5 h2{
@@ -365,8 +383,93 @@ html, body{
 } */
 
 
+
+
+/* footer styling */
 footer{
-    height: 90vw;
+    height: 60vw;
     width: 100%;
     background-color: #edbfff;
+}
+
+
+.footer-style{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 100px;
+    position: relative;
+}
+
+.footer-style h3{
+    color: #111;
+    font-size: 6vw;
+    font-weight: 200;
+    padding: 100px;
+    
+    
+}
+
+
+.footer-style h4{
+    color: #111;
+    background-color:#fff;
+    height: 100px;
+    width: 100px;
+    border-radius: 50px;
+    /* text-align: center; */
+    display: flex;
+    align-items:center;
+    padding: 20px;
+    font-weight: 50;
+    margin-right: 90px;
+    font-size: 8px;
+    text-transform:uppercase;
+    
+}
+
+
+.footer-style h4:hover{
+    background-color: #111;
+    color: #fff;
+}
+
+
+.footer-style2{
+    margin-left: 100px;
+    padding-top: 100px;
+}
+
+.footer-style2 h4{
+    color: #111;
+    font-weight: 100;
+}
+
+
+.flec-dericti{
+    display: flex;
+    padding-left: 100px;
+    padding-top: 70px;
+
+}
+
+
+.footer-style3 h4{
+    color: #111;
+    font-weight: 300;
+    text-transform: uppercase;
+    font-size: 9px;
+    padding-right: 30px;
+    
+}
+
+
+.footer-style3 span{
+    display: flex;
+    flex-direction: column;
+    color: #111;
+    padding-top: 5px;
+    font-weight: 100;
+    text-transform: capitalize;
+
 }
