--- a/Projects/project 3/style.css
+++ b/Projects/project 3/style.css
@@ -473,3 +473,14 @@ footer{
     text-transform: capitalize;
 
 }
+
+
+/* #nav h4:hover{
+    background-color: #3c373e;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    position: relative;
+    z-index: 9;
+
+} */
