--- a/Projects/project 4/style.css
+++ b/Projects/project 4/style.css
@@ -64,12 +64,205 @@ html,body{
     padding: 5px;
 }
 
-.icon i {
-    padding: 25px;
-    font-size: 25px;
-    
+.icon button{
+    border: none;
+    margin: 10px 30px;
+    background-color: transparent;
+}
+
+.icon button i{
+    font-size: 20px;
+}
+
+/* menubar style */
+.menu{
+    height: 100vh;
+    width: 100%;
+    background-color:#3d3a3a;
+    color: #fff;
+    opacity: 0;
+    position: absolute;
+    z-index: 0;
+    display: flex;
+    align-items:end;
+    justify-content: space-between;
+    padding: 10px 10px;
+}
+
+.menu li{
+    list-style-type: none;
+    font-size: 20px;
+    font-weight: 100;
+}
+
+.menu .bar li{
+    font-size: 7vh;
+    font-weight: 1000;
+    text-transform: uppercase;
     
 }
+
+
+.menu .cardz{
+    margin-bottom: 64px;
+}
+
+
+.menu .cardx li{
+    color:rgb(174, 168, 168);
+    font-size: 20px;    
+}
+
+.menu .cardy li{
+    color:rgb(174, 168, 168);
+    font-size: 20px;    
+}
+
+.menu .cardz li{
+    color:rgb(174, 168, 168);
+    font-size: 20px;    
+}
+
+.menu h3{
+    font-size: 27px;
+    margin-bottom: 16px;
+}
+
+/* card style */
+
+.card-details{
+    min-height: 92vh;
+    width: 100%;
+    background-color: #111;
+    z-index: 0;
+    opacity: 0;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 350px;
+}
+
+.card-details h1{
+    font-size: 35px;
+    text-transform: lowercase;
+    padding-bottom: 40px;
+    color: #fff;
+    font-weight: 100;
+
+}
+
+.card-details h2{
+    border: 2px solid #fff;
+    border-radius: 30px;
+    padding: 30px 100px;
+    font-size: 25px;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 700;
+    margin-bottom: 100px;
+
+}
+
+
+#scroller{
+    /* background-color: red; */
+    white-space:nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    z-index: 10;
+    border-top: 3px solid #fff;
+}
+
+
+#scroller::-webkit-scrollbar{
+    display: none;
+}
+
+
+#scroller-in{
+    display: inline-block;
+    white-space: nowrap;
+    animation-name: scroll;
+    animation-duration: 25s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+#scroller h4{
+    display:inline-block;
+    font-size: 110px;
+    font-weight: 900;
+    font-family: gilroy;
+    margin-right: 20px;
+    transition: all linear 0.5s;
+    color:#fff;
+    text-transform: uppercase;
+
+}
+
+
+@keyframes scroll {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
+
+
+
+  #scroller2{
+    /* background-color: red; */
+    white-space:nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    z-index: 10;
+    border-top: 3px solid #fff;
+}
+
+
+#scroller2::-webkit-scrollbar{
+    display: none;
+}
+
+
+#scroller-in2{
+    display: inline-block;
+    white-space: nowrap;
+    animation-name: scroll2;
+    animation-duration: 25s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+#scroller2 h4{
+    display:inline-block;
+    font-size: 110px;
+    font-weight: 900;
+    font-family: gilroy;
+    margin-right: 20px;
+    transition: all linear 0.5s;
+    color:#fff;
+    text-transform: uppercase;
+
+}
+
+@keyframes scroll2 {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(100%);
+    }
+    
+  }
+
+
 
 
 
@@ -156,33 +349,89 @@ html,body{
 
 .page2 .elem .dets{
     height: 60px;
-    width: 80%;
+    width: 70%;
     border-radius: 30px;
     position: absolute;
     z-index: 9;
     top: 50%;
-    left: 10%;
+    left: 15%;
     transform: translate(-50%,-50%);
     background-color:blanchedalmond;
 
 }
 
-.page2 .elem .dets:hover{
+/* .page2, .elem , img ,h5:hover{
     height: 300px;
-}
+    opacity: 1;
+
+} */
 
 .page2 .elem .dets ul{
     margin-left: 40px;
-    padding-top: 12px;
+    padding-top: 20px;
     font-size: 20px;
 
 }
 
 .page2 span{
-    padding-left: 95px;
+    padding-left: 4vw;
     text-transform: uppercase;
     font-weight: 800;
 }
+
+.page2 li{
+    font-size: 2vh;
+    padding-left: 2vw;
+
+}
+
+.page2 #gifts{
+    margin-left: -70px;
+    margin-right: -20px;
+
+}
+
+.page2 .box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5vh;
+}
+
+.page2 .box img{
+    height: 120px;
+    width: 100%;
+    object-fit: cover;
+    opacity: 0;
+
+}
+
+/* .page2 .box img:hover{
+    opacity: 1;
+} */
+
+.page2 .box2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2vh;
+}
+
+.page2 .box2 h5{
+    text-align: center;
+    padding: 15px;
+    padding-right: 30px;
+    font-size: 1.2vh;
+    letter-spacing: 1px;
+    color: rgb(76, 74, 74);
+    font-weight: 100;
+    opacity: 0;
+}
+
+/* .page2 .box2 h5:hover{
+    opacity: 1;
+} */
+
 
 /* page3 */
 
